tests/src/frontend/syntax/invalid/lvalue_assign_set.sk
fun main(): String {
  a[].x = 42;
  "Fail"
}
